--- a/dauber_bac copy.html
+++ b/dauber_bac copy.html
@@ -222,21 +222,242 @@
 
         <!--collapse start-->
 
+        <div class="col-md-6">
 
+          <!--carousel-custom-->
+
+          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/ad/28/5b/ad285bb04cefd3a62a90ebced869af30.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/41/bc/1c/41bc1cf8bb9bed42a0271fba3b99ee8d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
+
+
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+                    <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                      <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                    </li>
+                    <li data-target="#carousel-custom" data-slide-to="1">
+                      <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                    </li>
+                    <li data-target="#carousel-custom" data-slide-to="2">
+                      <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                    </li>
+                  </ol>-->
+            <!--Indicators end-->
+          </div>
+
+          <!--carousel-custom-->
+        </div>
         <!--collapse end-->
 
       </div>
 
     </div>
 
-
-    <!--productNav start-->
+    <!--start-->
     <div class="container">
-      <div style="padding-top: 20px;" class="col-md-12">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div style="border-top: 1px solid" class="row">
+            <div class="col-1"><small>🗓</small></div>
+            <div class="col-2"><small>年号</small></div>
+            <div class="col-2"><small>月日</small></div>
+            <!--div class="col-2"><small>時間</small></div-->
+            <div class="col-2"><small>製品</small></div>
+            <div class="col-2"><small>備考</small></div>
+          </div>
+        </div>
+      </div>
+      <!--timeloop start-->
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row toybox">
+            <div class="col-1"><small>🗓</small></div>
+            <div class="col-2"><small>2021</small></div>
+            <div class="col-2"><small>12/23</small></div>
+            <!--div class="col-2"><small>15:00</small></div-->
+            <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
+            <div class="col-2"><small>💡</small></div>
+          </div>
+        </div>
+      </div>
+      <!--timeloop end-->
+      <div id="collapseExample02" style="padding-top: 20px;" class="col-md-12 collapse">
+        <div class="col-md-6">
+          <div class="inner cover">
+            <h1 class="cover-heading">
+                      <font>MagicInk</font>
+                    </h1>
+            <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
+            <p>
+              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。
+              今回は、タイトルにある様にMagicInkという製品を、私の視点で捉える事で、安価で手に入る補充液を塗布具として流用する事を思いついた。
+              流用した箇所は以下の通りだ。<br>
+              </font>
+              <p>
+              1.マジックインクのインク補充容器
+              <br>
+              2.ペイントマーカーのインク流体バルブ
+              <br>
+              </p>
+            <font>
+              上記の製品は比較的に容易に入手が可能（他国では・・・？）で、本来は塗布具として組み合わせる事を想定していない為。
+              存在しない箇所を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップとなる、インクホルダーを作る事で塗布具としての使用を成立させている。
+              塗布する箇所の幅は直径50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できない。
+              その為、50mm幅に直径を変更した。
+              直形50mm幅の塗布部分は
+              <a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>
+              <a class="button" href="https://www.monotaro.com/g/01389385/?displayId=11">（2022年11月の時点ではスポンジとガーゼを組み合わせ）</a>
+              使用している。
+              現在はMagicIncを流用する事で街に特化した塗布具の性質になり、MagicInkの特性を存分に発揮できる代物になった。
+              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、自主製作できなかった金型を使用せずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。
+              現代の2021年の今日はどこの世界に行ってもMagicInkの補充液とペイントマーカーと３Dプリンターを活用する事で、本来意図しなかった視点を獲得する事が叶ったのである。
+              デジタルツールの使い方によっては,深く掘るには幅がいる。一例と捉えてもらえれば幸いだ。
+              データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。<br>
+
+              2022/01/06 追記<br>
+              MagicInkに修正箇所があったためデータをアップデートしました。
+
+            </font>
+            </p>
+          </div>
+        </div>
+        <!--text start
+        <div class="col-md-6">
+          <div class="grid_row">
+            <div style="border-top: 1px solid" class="row">
+              <div class="col-3"><small>Project</small></div>
+              <div class="col-3 "><small>Program</small></div>
+              <div class="col-2"><small>Location</small></div>
+            </div>
+
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>Dauber</small></div>
+              <div class="col-3 toybox"><small>20200701</small></div>
+              <div class="col-2 toybox"><small>TOKYO</small></div>
+            </div>
+            <div class="row">
+              <div class="col-3"><small>"norma”</small></div>
+              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
+            </div>
+          </div>
+
+        </div>
+        text end-->
+        <!--target  collapseExample stary
+        <div id="collapseExample" class="col-md-6 collapse">
+          <div class="grid_row">
+            <div class="row toybox">
+              <div class="col-3"><small>Size</small></div>
+              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-2"><small>Date</small></div>
+            </div>
+            <div class="row ">
+              <div class="col-3 toybox"><small>"Φ50mm”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
+              </div>
+            </div>
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>"Φ50mm”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        target  collapseExample -->
+
+
+        <!-- <div class="row toybox">
+                    <div class="col-3 toybox"><small>"Φ50mm”</small></div>
+                    <div class="col-3 toybox"><small>1:1</small></div>
+                    <div class="col-2 toybox"><small>STL</small></div>
+                    <div class="col-3 toybox">
+                      <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
+                    </div>
+                  </div> -->
+
+        <!--text-->
+
+        <!--collapse start-->
+
+        <div class="col-md-6">
+
+          <!--carousel-custom-->
+
+          <div id="carousel-custom001" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/00/60/2d/00602d8d05949c2fe71ab61399e650ea.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom001" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom001" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
+
+
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+                          <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                            <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                          </li>
+                          <li data-target="#carousel-custom" data-slide-to="1">
+                            <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                          </li>
+                          <li data-target="#carousel-custom" data-slide-to="2">
+                            <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                          </li>
+                        </ol>-->
+            <!--Indicators end-->
+          </div>
+
+          <!--carousel-custom-->
+        </div>
+        <!--collapse end-->
       </div>
     </div>
-    <!--productNav end-->
+  </div>
+  <!--end-->
+  <!--productNav start-->
+  <div class="container">
+    <div style="padding-top: 20px;" class="col-md-12">
+      <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+    </div>
+  </div>
+  <!--productNav end-->
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
