--- a/dauber.html
+++ b/dauber.html
@@ -231,9 +231,11 @@
 
 
     <!--productNav start-->
-    <div class="container">
-      <div style="padding-top: 20px;" class="col-md-12">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
       </div>
     </div>
     <!--productNav end-->
