--- a/dauber_en.html
+++ b/dauber_en.html
@@ -166,7 +166,7 @@
                   <div class="col-3 toybox"><small>1:1</small></div>
                   <div class="col-3 toybox"><small>Blender</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&id=1ch0gUA-60yIYoJqZorchzquK2EIyFiju"><small>”Download”</small></a>
+                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1N6aS4LB5x5u-omIwEPaDIehf8ohfknR-"><small>”Download”</small></a>
                   </div>
                 </div>
                 <div class="row ">
@@ -174,7 +174,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>STL</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&id=1Z_7QSPOYpc5KT4T99bkWfef4_kQY_Ufs"><small>”Download”</small></a>
+                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1XKj1RdcnHz7XDeDZq3k2NAnJoopkgdrz"><small>”Download”</small></a>
                   </div>
                 </div>
                 <div class="row ">
@@ -186,50 +186,52 @@
                   </div>
                 </div>
               </div>
-              <!--target  collapseExample stary-->
-              <!--target end-->
-              <!--target staryt-->
-              <div class="row">
-                <div class="col-2"><small>"👀”</small></div>
-                <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">Φ80mm</a></small></div>
-              </div>
-              <!--target end-->
-              <div id="collapseExample2" class="collapse">
-                <div class="grid">
-                  <div class="row toybox">
-                    <div class="col-2"><small>Size</small></div>
-                    <div class="col-3 "><small>Scale</small></div>
-                    <div class="col-3"><small>Date</small></div>
+            </div>
+            <!--target  collapseExample stary-->
+            <!--target end-->
+            <!--target staryt-->
+            <div class="row">
+              <div class="col-2"><small>"👀”</small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">Φ80mm</a></small></div>
+            </div>
+            <!--target end-->
+            <div id="collapseExample2" class="collapse">
+              <div class="grid">
+                <div class="row toybox">
+                  <div class="col-2"><small>Size</small></div>
+                  <div class="col-3 "><small>Scale</small></div>
+                  <div class="col-3"><small>Date</small></div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small>"Φ80”</small></div>
+                  <div class="col-3 toybox"><small>1:1</small></div>
+                  <div class="col-3 toybox"><small>Blender</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1ivR9Y6azzccJI3qiqPC_gCgsqx8BQBRH"><small>”Download”</small></a>
                   </div>
-                  <div class="row ">
-                    <div class="col-2 toybox"><small>"Φ80”</small></div>
-                    <div class="col-3 toybox"><small>1:1</small></div>
-                    <div class="col-3 toybox"><small>Blender</small></div>
-                    <div class="col-3 toybox">
-                      <a class="button" href="https://drive.google.com/uc?export=download&id=10u7TZ6FaiNJ-osO_ULtX90vBL7iMYKk9"><small>”Download”</small></a>
-                    </div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small>STL</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1meKsCGkpM0xpD4VFdQzfVa4hzENgtrTl"><small>”Download”</small></a>
                   </div>
-                  <div class="row ">
-                    <div class="col-2 toybox"><small></small></div>
-                    <div class="col-3 toybox"><small></small></div>
-                    <div class="col-3 toybox"><small>STL</small></div>
-                    <div class="col-3 toybox">
-                      <a class="button" href="https://drive.google.com/uc?export=download&id=1wqBnRG8Dse4f3AVriMXcIkfQUYgMSUUz"><small>”Download”</small></a>
-                    </div>
-                  </div>
-                  <div class="row ">
-                    <div class="col-2 toybox"><small></small></div>
-                    <div class="col-3 toybox"><small></small></div>
-                    <div class="col-3 toybox"><small>file</small></div>
-                    <div class="col-3 toybox">
-                      <a class="button" href="https://drive.google.com/uc?export=download&id=1HUu6b4pWX8GoHxfFTBsC7AfaIiFyVb-M"><small>”Download”</small></a>
-                    </div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small>file</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&id=1HUu6b4pWX8GoHxfFTBsC7AfaIiFyVb-M"><small>”Download”</small></a>
                   </div>
                 </div>
               </div>
             </div>
-            <!--target  collapseExample -->
-            <!-- <div class="row toybox">
+          </div>
+        </div>
+        <!--target  collapseExample -->
+        <!-- <div class="row toybox">
                       <div class="col-3 toybox"><small>"R40”</small></div>
                       <div class="col-3 toybox"><small>1:1</small></div>
                       <div class="col-2 toybox"><small>STL</small></div>
@@ -238,39 +240,39 @@
                       </div>
                     </div> -->
 
-            <!--text-->
+        <!--text-->
 
-            <div class="col-md-6">
+        <div class="col-md-6">
 
-              <!--carousel-custom-->
+          <!--carousel-custom-->
 
-              <div id="carousel-custom" class="carousel slide" data-ride="carousel">
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                  <div class="item active">
-                    <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                  </div>
-                  <div class="item ">
-                    <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                  </div>
-                  <div class="item ">
-                    <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                  </div>
-                </div>
+          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+            </div>
 
-                <!-- Controls -->
-                <!---->
-                <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-                  <!--<span class="fas fa-arrow-left"></span>-->
-                </a>
-                <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-                  <!--<span class="fas fa-arrow-right"></span>-->
-                </a>
-                <!---->
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
 
 
-                <!-- Indicators start-->
-                <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
                         <li data-target="#carousel-custom" data-slide-to="0" class="active">
                           <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
                         </li>
@@ -281,36 +283,36 @@
                           <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
                         </li>
                       </ol>-->
-                <!--Indicators end-->
-              </div>
-
-              <!--carousel-custom-->
-            </div>
+            <!--Indicators end-->
           </div>
 
+          <!--carousel-custom-->
         </div>
-
-        <!--productNav start-->
-        <div id="main">
-          <div class="container">
-            <div id="productNav_footer" class="col-md-12">
-              <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-            </div>
-          </div>
-        </div>
-        <!--productNav end-->
-
       </div>
 
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="js/crime.js"></script>
-      <script src="js/tiltfx.js"></script>
-      <script>
-        $(document).ready(function () {
-          $('[data-toggle="tooltip"]').tooltip();
-        });
-      </script>
+    </div>
+
+    <!--productNav start-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+    <!--productNav end-->
+
+  </div>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/crime.js"></script>
+  <script src="js/tiltfx.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
 </body>
 </html>
