--- a/dauber.html
+++ b/dauber.html
@@ -177,7 +177,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>file</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&id=1d1B1HiXSsLQgbBSgGkXYuk2LDofxCqUe"><small>”Download”</small></a>
+                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1d1B1HiXSsLQgbBSgGkXYuk2LDofxCqUe"><small>”Download”</small></a>
                   </div>
                 </div>
               </div>
@@ -218,7 +218,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>file</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&id=1HUu6b4pWX8GoHxfFTBsC7AfaIiFyVb-M"><small>”Download”</small></a>
+                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1HUu6b4pWX8GoHxfFTBsC7AfaIiFyVb-M"><small>”Download”</small></a>
                   </div>
                 </div>
               </div>
