--- a/dauber_en.html
+++ b/dauber_en.html
@@ -166,7 +166,7 @@
                   <div class="col-3 toybox"><small>1:1</small></div>
                   <div class="col-3 toybox"><small>Blender</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1N6aS4LB5x5u-omIwEPaDIehf8ohfknR-"><small>”Download”</small></a>
+                    <a class="button" <!--href="https://drive.google.com/uc?export=download&amp;id=1N6aS4LB5x5u-omIwEPaDIehf8ohfknR-"><small>”Download”</small></a>
                   </div>
                 </div>
                 <div class="row ">
@@ -174,7 +174,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>STL</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1XKj1RdcnHz7XDeDZq3k2NAnJoopkgdrz"><small>”Download”</small></a>
+                    <a class="button" <!--href="https://drive.google.com/uc?export=download&amp;id=1XKj1RdcnHz7XDeDZq3k2NAnJoopkgdrz"><small>”Download”</small></a>
                   </div>
                 </div>
                 <div class="row ">
@@ -182,7 +182,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>file</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1lvT2dGi_gW5RqT5wEX03gcEskqJM1txk"><small>”Download”</small></a>
+                    <a class="button" <!--href="https://drive.google.com/uc?export=download&amp;id=1lvT2dGi_gW5RqT5wEX03gcEskqJM1txk"><small>”Download”</small></a>
                   </div>
                 </div>
               </div>
@@ -207,7 +207,7 @@
                   <div class="col-3 toybox"><small>1:1</small></div>
                   <div class="col-3 toybox"><small>Blender</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1ivR9Y6azzccJI3qiqPC_gCgsqx8BQBRH"><small>”Download”</small></a>
+                    <a class="button" <!--href="https://drive.google.com/uc?export=download&amp;id=1ivR9Y6azzccJI3qiqPC_gCgsqx8BQBRH"><small>”Download”</small></a>
                   </div>
                 </div>
                 <div class="row ">
@@ -215,7 +215,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>STL</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1meKsCGkpM0xpD4VFdQzfVa4hzENgtrTl"><small>”Download”</small></a>
+                    <a class="button" <!--href="https://drive.google.com/uc?export=download&amp;id=1meKsCGkpM0xpD4VFdQzfVa4hzENgtrTl"><small>”Download”</small></a>
                   </div>
                 </div>
                 <div class="row ">
@@ -223,7 +223,7 @@
                   <div class="col-3 toybox"><small></small></div>
                   <div class="col-3 toybox"><small>file</small></div>
                   <div class="col-3 toybox">
-                    <a class="button" href="https://drive.google.com/uc?export=download&amp;id=1Niv6V0rgHj2TRojM83aC-nz_mcXHhsrb"><small>”Download”</small></a>
+                    <a class="button" <!--href="https://drive.google.com/uc?export=download&amp;id=1Niv6V0rgHj2TRojM83aC-nz_mcXHhsrb"><small>”Download”</small></a>
                   </div>
                 </div>
               </div>
