--- a/pages/dauber.html
+++ b/pages/dauber.html
@@ -18,17 +18,17 @@
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="index.html"><img src="images/geometric_pattern.svg"></a>
+        <a class="navbar-brand" href="../pages/index.html"><img src="../pubric/images/geometric_pattern.svg"></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li><a class="dropdown-item" href="index.html">
+                　<li><a class="dropdown-item" href="../pages/index.html">
                     <p>home</p>
                   </a></li>
-                <li><a class="dropdown-item" href="project.html">
+                <li><a class="dropdown-item" href="../pages/project.html">
                     <p>project</p>
                   </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
@@ -108,28 +108,23 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                Dauber
+                <font>Dauber</font>
               </h1>
-            <p><small>Language:<a href="dauber.html">JP</a>/EN</small></p>
-            <p><small>In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
+            <p><small>Language:JP/<a href="../pages/dauber_en.html">EN</a></small></p>
+            <p><font>2004年スウェーデンの<a class="button" href="http://a5press.net/">A5press</a>からKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+            これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
+            DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
+            彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自主制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
+            イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメント(Do it Yourself運動)と時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(組織集団)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかったと言える。
 
-            This is the only book I know about DIY markers and their background.
-            DIY markers are tools that graffiti writers has come to create while competing for the individuality of tagging(signatures) on the street.
-            They have modified existing pens and markers, diverted products for other purposes such as shoe polishers and for cars, etc. and made their own self made markers.
-            This flow was quite natural for graffiti culture, which was born in New York at the same time as the DIY movement that was born in England and spread mainly in North America in the 1970s.
-            However, contrary to the speed at which graffiti spreads these technologies and materials were spread only within some small communities due to the nature of graffiti such as anonymity and crew, so until the internet became widespread at recent years that it could be said that it was not a lot shared as a book or information.
+            Kingsizeは、その書籍の名のごとく大きなマーカーを制作する一連の過程といくつかの論述で構成されている。
+            当時としては見ることがなかったであろう50mmの太さのマーカーを、資材量販店で揃えたであろう素材を組み合わせて制作する過程と、そのマーカーを世界中のライターたちに配布、実用している記録写真。
+            そしてkingsizeの発行者であり作家のアダムスの序文、ニューヨークで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したクレイグ・キャッスルマンによる当時の情景描写、世界大戦後グローバリズムが進む中で世界中にアメリカナイゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたアンドレアス・バーグの論述で構成されていた。
 
-            Kingsize consists of a series of processes and several essays that create a large marker, as the name of the book suggests.
-            by combining materials that would have been prepared at a material mass retailer, the process of producing a marker with a thickness off 50mm, which would not have been seen at that time. recorded photos of distributing the marker to writers all over the world for practical use.
-            the preface by publisher of King size and artist Adams. the scene description of the early days by Craig Cattleman who wrote the book “getting up” by interviewing young graffiti writers in New York. And Andreas Berg’s essay on how Americanization pervades the world as globalism progresses after World War 2, and the Swedish society affected by it.
+            先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。そうした意味で世界のグローバリズムの中でグラフィティがニューヨークを経て世界中に広がっていく風景と、スウェーデンでの背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
 
-            as mentioned earlier, graffiti culture which has the characteristics of anonymity and crew, often loses its detailed flow and background from the records.
-            in that sense, the role of this book which documented the landscape of graffiti spreading all over the world through New York while the globalism of the world, and the background and flow of Sweden in a way that will remain in posterity is significant.
-
-            Now, 16 years ofter Kingsize was published,
-            how have DIY makers and tools changed for writers who continue to writing on the street.
-            In this project, we will consider the transformation of tools and expressions in graffiti, and while referring to kingsize, modeling with 3D software based on the digital fabrication technology that became possible with the development of the maker movement after the 2010s. And we will try to share information and file by social networking and explore the ideal way of DIY makers in modern times.
-            </small></p>
+            ではkingsizeが出版されてから16年が経過した今、ストリートで活動を続けるライターたちにとってのDIYマーカー、ツールどう変化したのだろうか。このプロジェクトでは、グラフィティにおけるツールの変容と表現の変容を考察するとともに、kingsizeを参照としながら、2010年代以降のメーカームーブメントの発展とともに可能となったデジタルファブリケーションの技術をもとに3Dソフトによるモデリングや、ソーシャルネットワーキングによる情報共有を試み、現代におけるDIYマーカーのあり方を探る。
+            </font></p>
           </div>
         </div>
         <!--text-->
@@ -231,17 +226,17 @@
           </div>
         </div>
         <!--target  collapseExample -->
+        <!--target  collapseExample -->
         <!-- <div class="row toybox">
-                      <div class="col-3 toybox"><small>"R40”</small></div>
-                      <div class="col-3 toybox"><small>1:1</small></div>
-                      <div class="col-2 toybox"><small>STL</small></div>
-                      <div class="col-3 toybox">
-                        <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
-                      </div>
-                    </div> -->
+              <div class="col-3 toybox"><small>"Φ50mm”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
+              </div>
+            </div> -->
 
         <!--text-->
-
         <div class="col-md-6">
 
           <!--carousel-custom-->
@@ -273,24 +268,26 @@
 
             <!-- Indicators start-->
             <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-                        <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                          <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                        </li>
-                        <li data-target="#carousel-custom" data-slide-to="1">
-                          <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                        </li>
-                        <li data-target="#carousel-custom" data-slide-to="2">
-                          <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                        </li>
-                      </ol>-->
+                                        <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                                          <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                                        </li>
+                                        <li data-target="#carousel-custom" data-slide-to="1">
+                                          <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                                        </li>
+                                        <li data-target="#carousel-custom" data-slide-to="2">
+                                          <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                                        </li>
+                                      </ol>-->
             <!--Indicators end-->
           </div>
 
           <!--carousel-custom-->
         </div>
+
       </div>
 
     </div>
+
 
     <!--productNav start-->
     <div id="main">
@@ -301,14 +298,13 @@
       </div>
     </div>
     <!--productNav end-->
-
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/crime.js"></script>
-  <script src="js/tiltfx.js"></script>
+  <script src="../js/crime.js"></script>
+  <script src="../js/tiltfx.js"></script>
   <script>
     $(document).ready(function () {
       $('[data-toggle="tooltip"]').tooltip();
