--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,9 @@
   <meta name="robots" content="noindex,nofollow">
 
   <title>lol</title>
-  <link href="css/crime.css" rel="stylesheet">
-  <link href="css/menu.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
+  <link href="../style/css/crime.css" rel="stylesheet">
+  <link href="../style/css/menu.css" rel="stylesheet">
+  <link href="../style/css/grid.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/v4-shims.css">
 
@@ -17,17 +17,17 @@
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="index.html"><img src="images/geometric_pattern.svg"></a>
+        <a class="navbar-brand" href="../pages/index.html"><img src="images/geometric_pattern.svg"></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li><a class="dropdown-item" href="index.html">
+                　<li><a class="dropdown-item" href="../pages/index.html">
                     <p>home</p>
                   </a></li>
-                <li><a class="dropdown-item" href="project.html">
+                <li><a class="dropdown-item" href="../pages/project.html">
                     <p>project</p>
                   </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a>-->
@@ -100,6 +100,6 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/crime.js"></script>
+  <script src="../js/crime.js"></script>
 </body>
 </html>
