--- a/pages/project.html
+++ b/pages/project.html
@@ -4,9 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>lol</title>
-  <link href="css/crime.css" rel="stylesheet">
-  <link href="css/menu.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
+  <link href="../style/css/crime.css" rel="stylesheet">
+  <link href="../style/css/menu.css" rel="stylesheet">
+  <link href="../style/css/grid.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 
@@ -15,17 +15,17 @@
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="index.html"><img src="images/geometric_pattern.svg"></a>
+        <a class="navbar-brand" href="../pages/index.html"><img src="images/geometric_pattern.svg"></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li><a class="dropdown-item" href="index.html">
+                　<li><a class="dropdown-item" href="../pages/index.html">
                     <p>home</p>
                   </a></li>
-                <li><a class="dropdown-item" href="project.html">
+                <li><a class="dropdown-item" href="../pages/project.html">
                     <p>project</p>
                   </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
@@ -95,7 +95,7 @@
   <!--content start-->
   <!--text-->
   <div class="container">
-    <a href="dauber.html">
+    <a href="../pages/dauber.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div style="border-top: 1px solid" class="row">
@@ -106,7 +106,7 @@
         </div>
       </div>
     </a>
-    <a href="Sketch.html">
+    <a href="../pages/Sketch.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
@@ -146,7 +146,7 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/crime.js"></script>
-  <script src="js/tiltfx.js"></script>
+  <script src="../js/crime.js"></script>
+  <script src="../js/tiltfx.js"></script>
 </body>
 </html>
